# echoworks-ai

./: .dockerignore  .env.example  .gitignore  AION_OS_OFFLINE_PROOF.html  CNAME  DATA_PRIVACY_ARCHITECTURE.md  Dockerfile  ECHOBLUE_MOAT_MANIFESTO.md  LINKEDIN_CREATOR_OUTREACH.txt  LINKEDIN_OUTREACH_SHEET.txt  LinkedIn 4.17.26 post REVISED.md  README.md  TIER_COMPARISON.md  aion_showcase.html  benchmark_aggressive.py  benchmark_doc_intelligence.py  benchmark_latency.py  benchmark_lmstudio.ps1  benchmark_quick.bat  benchmark_threat_profile.py  demo_ip_intel.py  demo_ip_intel_live.py  docker-compose.yml  index.html  pitch_deck.py  pyproject.toml  quick_start_api.ps1  requirements.txt  sell.py  showcase_server.py  start-servers.bat  test_agent_integration.py  test_api_integration.py  test_baseline_debug.py  test_baseline_spike.py  test_cli.txt  test_core.py  test_data_privacy.py  test_document_intelligence.py  test_integration.py  (+11 more)
AION OS_Manifestro/: This is the AION OS Sovereign Node Manifesto.docx
aion-sveltekit/: INTEGRATION_GUIDE.md  README.md  package-lock.json  package.json  vite.config.ts
aionos/: __init__.py  __main__.py
config/: cloudflare.example.json  microsoft_graph.example.json  prometheus.yml
docs/: AI_RISK_AUDIT_PACKAGE.md  API_INTEGRATION_PLAN.md  API_READY.md  ARCHITECTURE.md  ATTORNEY_DEPARTURE_RESEARCH.md  ATTORNEY_EXIT_LEGAL_SAFETY.md  CASE_RESEARCH_PROTOCOL.md  COMPLETION_SUMMARY.md  DATA_PRIVACY.md  DATA_PRIVACY_VERIFICATION.md  DEMO_VIDEO_MANIFESTO.md  DEMO_VOICEOVER_SCRIPT.md  DEMO_WITHOUT_PATTERNS.md  DUAL_VERTICAL_STRATEGY.md  HUMAN_CAPACITY_GEM.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INTEGRATION_ARCHITECTURE.md  LEGAL_KNOWLEDGE_INTEGRATION.md  MOAT_ENHANCEMENTS_COMPLETE.md  NEW_FEATURES.md  OUTPUT_DIVERSITY_SUMMARY.md  PATTERN_DATABASE_INFRASTRUCTURE.md  PATTERN_DATABASE_STATUS.md  PDF_REPORTS.md  PITCH_CURRENT_AND_VISION.md  QUICKSTART.md  REGULATED_ROOMS_MANIFESTO.md  STRATEGIC_EXECUTION_PLAN.md  STREAMLIT_DASHBOARD.md  SYSTEM_VERIFICATION.md  TIKTOK_FILMING_DAY_APR19.md  TUESDAY_EXECUTION_PLAN.md  VISUAL_DEMO_GUIDE.md  (+18 more)
(+350 files in other folders)
