[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "aionos"
version = "0.1.0"
description = "AION OS - Adversarial Intelligence Operating System for law firm insider threat detection"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.10"
authors = [
    {name = "CodeTyphoons"},
]
keywords = ["security", "insider-threat", "law-firm", "ai", "detection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "rich>=13.9.0",
    "typer>=0.15.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "requests>=2.31.0",
    "edge-tts>=6.1.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
crypto = ["cryptography>=42.0", "PyJWT>=2.8"]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.8",
    "ruff>=0.3",
]
all = ["aionos[crypto,dev]"]

[project.scripts]
aion = "aionos.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: Unit tests (fast, no I/O)",
    "integration: Integration tests (may need services)",
    "benchmark: Performance benchmarks",
    "slow: Tests that take > 10s",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.setuptools.packages.find]
include = ["aionos*"]
